<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_unique_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_enter_unique_id"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_enter_unique_id" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_current_value"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_uid_current_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"/>

        </LinearLayout>
    </LinearLayout>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="@color/light_gray" />-->

<!--    <LinearLayout-->
<!--        android:id="@+id/ll_device_name"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="?android:attr/selectableItemBackground"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="16dp">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Enter Name to Identify the Device"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Specify a short name to identify this device. Used by the server to identify which device is sending it messages." />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_device_name_current_value"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:text="Current Value: "-->
<!--            android:textStyle="bold" />-->


<!--    </LinearLayout>-->

</LinearLayout>